--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,8 +52,8 @@ target-version = ['py38']
 
 [tool.isort]
 profile = "black"
-sections = ['FUTURE', 'STDLIB', 'DJANGO', 'WAGTAIL', 'THIRDPARTY', 'FIRSTPARTY', 'LOCALFOLDER']
 known_first_party = ['periodic_review', 'tests']
-known_django = 'django'
-known_wagtail = 'wagtail'
-skip = ['migrations', '.git', '__pycache__', 'venv']
+skip = ["migrations", ".git", "__pycache__", "LC_MESSAGES", "locale", "build", "dist", ".github", ".tox", "venv", ".venv", ".coverage"]
+blocked_extensions = ["pyc", "md", "html", "txt", "css", "sh"]
+lines_between_types = 1
+lines_after_imports = 2
