--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,10 @@
-[tool.poetry]
+[project]
 name = "wagtail-periodic-review"
-version = "0.0.1"
 description = "A Wagtail package for periodic page content reviews"
-authors = ["Andy Babic <andy.babic@torchbox.com>"]
-maintainers = ["Dan Braghis <dan.braghis@torchbox.com>"]
+authors = [{name = "Andy Babic ", email = "andy.babic@torchbox.com"}]
+maintainers = [{name = "Dan Braghis", email="dan.braghis@torchbox.com"}]
 readme = "README.md"
-homepage = "https://github.com/zerolab/wagtail-periodic-review"
-repository = "https://github.com/zerolab/wagtail-periodic-review"
-license = "MIT"
+license = {file = "LICENSE"}
 keywords = ["Wagtail", "Django", "content", "review"]
 classifiers = [
     "Development Status :: 3 - Alpha",
@@ -15,37 +12,48 @@ classifiers = [
     "Intended Audience :: Developers",
     "Operating System :: OS Independent",
     "Framework :: Django",
-    "Framework :: Django :: 2.2",
-    "Framework :: Django :: 3.1",
     "Framework :: Django :: 3.2",
+    "Framework :: Django :: 4.1",
     "Framework :: Wagtail",
-    "Framework :: Wagtail :: 2",
+    "Framework :: Wagtail :: 4",
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.6",
-    "Programming Language :: Python :: 3.7",
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
 ]
 
-packages = [
-    { include = "wagtail_periodic_review" },
+dynamic = ["version"]
+requires-python = ">=3.8"
+dependencies = [
+    "Wagtail>=4.1",
+    "python-dateutil>=2.8,<3.0.0"
 ]
-include = ["CHANGELOG.md", "LICENSE", "README.md"]
 
-
-[tool.poetry.dependencies]
-python = ">=3.6.1,<3.10"
-django = ">=2.2.12,<4.0"
-wagtail = ">=2.11"
-python-dateutil = ">=2.8,<3.0.0"
-
-[tool.poetry.urls]
+[project.urls]
+Source = "https://github.com/zerolab/wagtail-periodic-review/blob/main/CHANGELOG.md"
 Changelog = "https://github.com/zerolab/wagtail-periodic-review/blob/main/CHANGELOG.md"
 
+
 [build-system]
-requires = ["poetry_core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["flit_core >=3.2,<4"]
+build-backend = "flit_core.buildapi"
+
+[tool.flit.module]
+name = "wagtail_periodic_review"
+
+[tool.flit.sdist]
+exclude = [
+    "tests",
+    "Makefile",
+    "docs",
+    ".*",
+    "*.json",
+    "*.ini",
+    "*.yml",
+    "testmanage.py",
+]
 
 [tool.black]
 target-version = ['py38']
