Update GitHub CI workflow

--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,13 @@ min_version = 4.0
 env_list =
     py{38,39,310,311}-django{3.2,4.1}-wagtail{4.1,4.2}
 
+[gh-actions]
+python =
+    3.8: py38
+    3.9: py39
+    3.10: py310
+    3.11: py311
+
 [testenv]
 package = editable
 setenv =
