Move coverage config to pyproject.toml

--- a/tox.ini
+++ b/tox.ini
@@ -20,7 +20,7 @@ setenv =
 
 deps =
     pip>=21.3
-    coverage>=7.0,<8.0
+    coverage[toml]>=7.0,<8.0
     django3.2: Django>=3.2,<3.3
     django4.1: Django>=4.1,<4.2
     wagtail4.1: wagtail>=4.1,<4.2
