--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,3 +65,39 @@ skip = ["migrations", ".git", "__pycache__", "LC_MESSAGES", "locale", "build", "
 blocked_extensions = ["pyc", "md", "html", "txt", "css", "sh"]
 lines_between_types = 1
 lines_after_imports = 2
+
+
+[tool.coverage.run]
+branch = true
+parallel = true
+source_pkgs = ["wagtail_periodic_review"]
+
+omit = ["**/migrations/*", "tests/*"]
+
+[tool.coverage.paths]
+source = ["src", ".tox/py*/**/site-packages"]
+
+[tool.coverage.report]
+show_missing = true
+ignore_errors = true
+skip_covered = true
+exclude_lines = [
+    # Have to re-enable the standard pragma
+    "pragma: no cover",
+
+    # Don't complain about missing debug-only code:
+    "def __repr__",
+    "if self.debug",
+
+    # Don't complain if tests don't hit defensive assertion code:
+    "raise AssertionError",
+    "raise NotImplementedError",
+    "return NotImplemented",
+
+    # Don't complain if non-runnable code isn't run:
+    "if 0:",
+    "if __name__ == .__main__.:",
+
+    # Nor complain about type checking
+    "if TYPE_CHECKING:",
+]
