Add coverage report
Use latest Python, harden

--- a/tox.ini
+++ b/tox.ini
@@ -34,12 +34,12 @@ commands_pre =
 
 commands =
     python -m coverage run manage.py test {posargs: -v 2}
-    python -m coverage report -m
+    # python -m coverage report -m
 
 
 [testenv:interactive]
 description = An interactive environment for local testing purposes
-base_python = python3.10
+base_python = python3.11
 
 deps =
     wagtail>=4.1
