--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,16 +25,31 @@ env:
 
 jobs:
   lint:
+    name: Lint
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - name: Set up Python 3.8
+      - name: Set up Python
         uses: actions/setup-python@v4
+        id: setup_python
         with:
-          python-version: '3.8'
-      - uses: pre-commit/action@v3.0.0
+          python-version: ${{env.PYTHON_LATEST}}
+
+      - name: Install pre-commit
+        if: steps.cache.outputs.cache-hit != 'true'
+        run: python -Im pip install pre-commit
+
+      - name: Cache pre-commit tools
+        uses: actions/cache@v3
+        id: cache
+        with:
+          key: pre-commit-${{ runner.os }}-${{ steps.setup_python.outputs.python-version}}-${{ hashFiles('.pre-commit-config.yaml') }}
+          path: ~/.cache/pre-commit
+
+      - name: Run pre-commit
+        run: pre-commit run --all-files
 
   tests:
     runs-on: ubuntu-latest
@@ -61,8 +76,8 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependecies
         run: |
-          python -m pip install --upgrade pip
-          python -m pip install tox tox-gh-actions
+          python -Im pip install --upgrade pip
+          python -Im pip install tox tox-gh-actions
       - name: Test
         run: tox
 
