--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,8 +14,10 @@ classifiers = [
     "Framework :: Django",
     "Framework :: Django :: 3.2",
     "Framework :: Django :: 4.1",
+    "Framework :: Django :: 4.2",
     "Framework :: Wagtail",
     "Framework :: Wagtail :: 4",
+    "Framework :: Wagtail :: 5",
     "License :: OSI Approved :: BSD License",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.8",
@@ -58,17 +60,37 @@ exclude = [
 [tool.black]
 target-version = ['py38']
 
-[tool.isort]
-profile = "black"
-known_first_party = ['periodic_review', 'tests']
-skip = ["migrations", ".git", "__pycache__", "LC_MESSAGES", "locale", "build", "dist", ".github", ".tox", "venv", ".venv", ".coverage"]
-blocked_extensions = ["pyc", "md", "html", "txt", "css", "sh"]
-lines_between_types = 1
-lines_after_imports = 2
+[tool.ruff]
+target-version = "py38"
+
+select = [
+    "B",  # flake8-bugbear
+    "C4", # flake8-comprehensions
+    "DJ", # flake8-django
+    "E",  # pycodestyle errors
+    "F",  # pyflakes
+    "I",  # isort
+    "PGH", # pygrep-hooks
+    "S",   # flake8-bandit
+    "SIM", # flake8-simplify
+    "W",   # pycodestyle warnings
+    "YTT",   # flake8-2020
+    "UP",  # pyupgrade
+    "RUF100",  # unused noqa
+]
+
+ignore = ["E501"]
+fixable = ["C4", "E", "F", "I", "UP"]
+
+[tool.ruff.isort]
+known-first-party = ["src", "wagtail_periodic_review"]
+lines-between-types = 1
+lines-after-imports = 2
 
 
 [tool.coverage.run]
 branch = true
+concurrency = ["multiprocessing", "thread"]
 parallel = true
 source_pkgs = ["wagtail_periodic_review"]
 
