Add Wagtail 5.x to the test matrix and use wheels in tox

--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,8 @@
 min_version = 4.0
 
 env_list =
-    py{38,39,310,311}-django{3.2,4.1}-wagtail{4.1,4.2}
+    py{38,39,310,311}-django{3.2,4.1}-wagtail{4.1,5.0,5.1}
+    py{38,39,310,311}-django{4.2}-wagtail{5.0,5.1}
 
 [gh-actions]
 python =
@@ -12,30 +13,42 @@ python =
     3.11: py311
 
 [testenv]
-package = editable
+package = wheel
+wheel_build_env = .pkg
+
+pass_env =
+    FORCE_COLOR
+    NO_COLOR
+
 setenv =
     PYTHONPATH = {toxinidir}
     DJANGO_SETTINGS_MODULE = tests.settings
     PYTHONDEVMODE = 1
 
 deps =
-    pip>=21.3
+    flit>=3.8
     coverage[toml]>=7.0,<8.0
     django3.2: Django>=3.2,<3.3
     django4.1: Django>=4.1,<4.2
+    django4.3: Django>=4.3,<4.3
     wagtail4.1: wagtail>=4.1,<4.2
     wagtail4.2: wagtail>=4.2,<5
+    wagtail5.0: wagtail>=5.0,<5.1
+    wagtail5.1: wagtail>=5.1,<5.2
     wagtailmain: git+https://github.com/wagtail/wagtail.git@main#egg=Wagtail
 
-install_command = python -m pip install -U {opts} {packages}
+install_command = python -Im pip install -U {opts} {packages}
 
 commands_pre =
-    python {toxinidir}/manage.py migrate
+    python {toxinidir}/tests/manage.py migrate
 
 commands =
-    python -m coverage run manage.py test {posargs: -v 2}
-    # python -m coverage report -m
+    python -m coverage run {toxinidir}/tests/manage.py test {posargs: -v 2}
 
+[testenv:coverage-report]
+commands =
+    python -Im coverage combine
+    python -Im coverage report -m
 
 [testenv:interactive]
 description = An interactive environment for local testing purposes
@@ -45,13 +58,19 @@ deps =
     wagtail>=4.1
 
 commands_pre =
-    python {toxinidir}/manage.py makemigrations
-    python {toxinidir}/manage.py migrate
-    python {toxinidir}/manage.py shell -c "from django.contrib.auth import get_user_model;User = get_user_model();(not User.objects.filter(username='admin').exists()) and User.objects.create_superuser('admin', 'super@example.com', 'changeme')"
-    python {toxinidir}/manage.py createcachetable
+    python -Im {toxinidir}/tests/manage.py makemigrations
+    python -Im {toxinidir}/tests/manage.py migrate
+    python -Im {toxinidir}/tests/manage.py shell -c "from django.contrib.auth import get_user_model;User = get_user_model();(not User.objects.filter(username='admin').exists()) and User.objects.create_superuser('admin', 'super@example.com', 'changeme')"
+    python -Im {toxinidir}/tests/manage.py createcachetable
 
 commands =
-    {posargs:python manage.py runserver 0.0.0.0:8020}
+    {posargs:python {toxinidir}/tests/manage.py runserver 0.0.0.0:8020}
 
 set_env =
     INTERACTIVE = 1
+
+[testenv:wagtailmain]
+deps =
+    flit>=3.8
+    coverage[toml]>=7.0,<8.0
+    wagtailmain: git+https://github.com/wagtail/wagtail.git@main#egg=Wagtail
