--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,6 +7,7 @@ on:
       - 'stable/**'
 
   pull_request:
+    branches: [main]
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -74,14 +75,19 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install dependecies
+      - name: ⬇️ Install dependencies
         run: |
           python -Im pip install --upgrade pip
-          python -Im pip install tox tox-gh-actions
-      - name: Test
-        run: tox
+          python -Im pip install flit tox tox-gh-actions
+          python -Im flit install --symlink
 
-      - name: Upload coverage data
+      - name: 🏗️ Build wheel
+        run: python -Im flit build --format wheel
+
+      - name: 🧪 Run tox targets for Python ${{ matrix.python-version }}
+        run: tox --installpkg ./dist/*.whl
+
+      - name: ⬆️ Upload coverage data
         uses: actions/upload-artifact@v3
         with:
           name: coverage-data
@@ -112,19 +118,19 @@ jobs:
 
       - run: python -Im pip install --upgrade coverage[toml]
 
-      - name: Download coverage data
+      - name: ⬇️ Download coverage data
         uses: actions/download-artifact@v3
         with:
           name: coverage-data
 
-      - name: Combine coverage
+      - name: ＋ Combine coverage
         run: |
           python -Im coverage combine
           python -Im coverage html --skip-covered --skip-empty
           python -Im coverage report
           echo "## Coverage summary" >> $GITHUB_STEP_SUMMARY
           python -Im coverage report --format=markdown >> $GITHUB_STEP_SUMMARY
-      - name: Upload HTML report if check failed.
+      - name: 📈 Upload HTML report
         uses: actions/upload-artifact@v3
         with:
           name: html-report
