--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,8 @@ min_version = 4.0
 
 env_list =
     py{38,39,310,311}-django{3.2,4.1}-wagtail{4.1,5.0,5.1}
-    py{38,39,310,311}-django{4.2}-wagtail{5.0,5.1}
+    py{38,39,310,311}-django{4.2}-wagtail{5.0,5.1,5.2}
+    py{312}-django{4.2}-wagtail{5.2}
 
 [gh-actions]
 python =
@@ -11,6 +12,7 @@ python =
     3.9: py39
     3.10: py310
     3.11: py311
+    3.12: py312
 
 [testenv]
 package = wheel
@@ -30,11 +32,11 @@ deps =
     coverage[toml]>=7.0,<8.0
     django3.2: Django>=3.2,<3.3
     django4.1: Django>=4.1,<4.2
-    django4.3: Django>=4.3,<4.3
+    django4.2: Django>=4.2,<4.3
     wagtail4.1: wagtail>=4.1,<4.2
-    wagtail4.2: wagtail>=4.2,<5
     wagtail5.0: wagtail>=5.0,<5.1
     wagtail5.1: wagtail>=5.1,<5.2
+    wagtail5.2: wagtail>=5.2rc1,<5.3
     wagtailmain: git+https://github.com/wagtail/wagtail.git@main#egg=Wagtail
 
 install_command = python -Im pip install -U {opts} {packages}
