--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,39 +55,9 @@ exclude = [
     "*.json",
     "*.ini",
     "*.yml",
+    "ruff.toml",
     "manage.py",
 ]
-
-[tool.black]
-target-version = ['py38']
-
-[tool.ruff]
-target-version = "py38"
-
-select = [
-    "B",  # flake8-bugbear
-    "C4", # flake8-comprehensions
-    "DJ", # flake8-django
-    "E",  # pycodestyle errors
-    "F",  # pyflakes
-    "I",  # isort
-    "PGH", # pygrep-hooks
-    "S",   # flake8-bandit
-    "SIM", # flake8-simplify
-    "W",   # pycodestyle warnings
-    "YTT",   # flake8-2020
-    "UP",  # pyupgrade
-    "RUF100",  # unused noqa
-]
-
-ignore = ["E501"]
-fixable = ["C4", "E", "F", "I", "UP"]
-
-[tool.ruff.isort]
-known-first-party = ["src", "wagtail_periodic_review"]
-lines-between-types = 1
-lines-after-imports = 2
-
 
 [tool.coverage.run]
 branch = true
