--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -117,7 +117,7 @@ jobs:
           # Use latest Python, so it understands all syntax.
           python-version: ${{env.PYTHON_LATEST}}
 
-      - run: python -Im pip install --upgrade coverage[toml]
+      - run: python -Im pip install --upgrade coverage
 
       - name: ⬇️ Download coverage data
         uses: actions/download-artifact@v4
