Tidy up tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -17,6 +17,8 @@ python =
 [testenv]
 package = wheel
 wheel_build_env = .pkg
+use_frozen_constraints = true
+constrain_package_deps = true
 
 pass_env =
     FORCE_COLOR
@@ -28,14 +30,12 @@ setenv =
     PYTHONDEVMODE = 1
 
 deps =
-    flit>=3.8
-    coverage[toml]>=7.0,<8.0
+    coverage>=7.0,<8.0
     django3.2: Django>=3.2,<3.3
     django4.2: Django>=4.2,<4.3
     django5.0: Django>=5.0,<5.1
     wagtail5.2: wagtail>=5.2,<5.3
     wagtail6.0: wagtail>=6.0,<6.1
-    wagtailmain: git+https://github.com/wagtail/wagtail.git@main#egg=Wagtail
 
 install_command = python -Im pip install -U {opts} {packages}
 
@@ -46,6 +46,10 @@ commands =
     python -m coverage run {toxinidir}/tests/manage.py test {posargs: -v 2}
 
 [testenv:coverage-report]
+base_python = python3.12
+package = skip
+deps =
+    coverage>=7.0,<8.0
 commands =
     python -Im coverage combine
     python -Im coverage report -m
@@ -53,9 +57,10 @@ commands =
 [testenv:interactive]
 description = An interactive environment for local testing purposes
 base_python = python3.12
+package = editable
 
 deps =
-    wagtail>=4.1
+    wagtail>=5.2
 
 commands_pre =
     python -Im {toxinidir}/tests/manage.py makemigrations
@@ -71,6 +76,5 @@ set_env =
 
 [testenv:wagtailmain]
 deps =
-    flit>=3.8
-    coverage[toml]>=7.0,<8.0
+    coverage>=7.0,<8.0
     wagtailmain: git+https://github.com/wagtail/wagtail.git@main#egg=Wagtail
