--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -50,15 +50,21 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: ⬇️ Install dependencies
         run: |
-          python -Im pip install --upgrade pip
-          python -Im pip install flit tox tox-gh-actions
-          python -Im flit install --symlink
+          python -m pip install uv
+          python -m uv venv .venv
+          echo "VIRTUAL_ENV=.venv" >> $GITHUB_ENV
+          echo "$PWD/.venv/bin" >> $GITHUB_PATH
+          python -Im uv pip install flit tox tox-gh-actions
 
       - name: 🏗️ Build wheel
-        run: python -Im flit build --format wheel
+        run: |
+          . .venv/bin/activate
+          python -Im flit build --format wheel
 
       - name: 🧪 Run tox targets for Python ${{ matrix.python-version }}
-        run: tox --installpkg ./dist/*.whl
+        run: |
+          . .venv/bin/activate
+          tox --installpkg ./dist/*.whl
 
       - name: ⬆️ Upload coverage data
         uses: actions/upload-artifact@v4
