Allow coverage to use sys.monitoring where available
Ref: https://mastodon.social/@hugovk/111965875328719839

--- a/tox.ini
+++ b/tox.ini
@@ -28,6 +28,8 @@ setenv =
     PYTHONPATH = {toxinidir}
     DJANGO_SETTINGS_MODULE = tests.settings
     PYTHONDEVMODE = 1
+    # will use the Python 3.12+ sys.monitoring when available
+    COVERAGE_CORE=sysmon
 
 deps =
     coverage>=7.0,<8.0
