--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -50,20 +50,15 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: ⬇️ Install dependencies
         run: |
-          python -m pip install uv
-          python -m uv venv .venv
-          echo "VIRTUAL_ENV=.venv" >> $GITHUB_ENV
-          echo "$PWD/.venv/bin" >> $GITHUB_PATH
-          python -Im uv pip install flit tox tox-gh-actions
+          python -m pip install uv --quiet --upgrade
+          python -Im uv pip install --quiet --system --upgrade flit tox tox-gh-actions
 
       - name: 🏗️ Build wheel
         run: |
-          . .venv/bin/activate
           python -Im flit build --format wheel
 
       - name: 🧪 Run tox targets for Python ${{ matrix.python-version }}
         run: |
-          . .venv/bin/activate
           tox --installpkg ./dist/*.whl
 
       - name: ⬆️ Upload coverage data
@@ -95,7 +90,7 @@ jobs:
           # Use latest Python, so it understands all syntax.
           python-version: ${{env.PYTHON_LATEST}}
 
-      - run: python -Im pip install --upgrade coverage
+      - run: python -Im pip install --quiet --upgrade coverage
 
       - name: ⬇️ Download coverage data
         uses: actions/download-artifact@v4
