--- a/tox.ini
+++ b/tox.ini
@@ -2,8 +2,8 @@
 min_version = 4.0
 
 env_list =
-    py{38,39,310,311}-django4.2-wagtail{5.2,6.1,main}
-    py{310,311,312}-django5.0-wagtail{5.2,6.1,main}
+    py{38,39,310,311}-django4.2-wagtail{5.2,6.1,6.2,main}
+    py{310,311,312}-django5.0-wagtail{5.2,6.1,6.2,main}
 
 [gh-actions]
 python =
@@ -36,6 +36,7 @@ deps =
     django5.0: Django>=5.0,<5.1
     wagtail5.2: wagtail>=5.2,<5.3
     wagtail6.1: wagtail>=6.1,<6.2
+    wagtail6.2: wagtail>=6.2,<6.3
 
 install_command = python -Im pip install -U {opts} {packages}
 
