Fix broken tox interactive test

--- a/tox.ini
+++ b/tox.ini
@@ -64,10 +64,10 @@ deps =
     wagtail>=5.2
 
 commands_pre =
-    python -Im {toxinidir}/tests/manage.py makemigrations
-    python -Im {toxinidir}/tests/manage.py migrate
-    python -Im {toxinidir}/tests/manage.py shell -c "from django.contrib.auth import get_user_model;User = get_user_model();(not User.objects.filter(username='admin').exists()) and User.objects.create_superuser('admin', 'super@example.com', 'changeme')"
-    python -Im {toxinidir}/tests/manage.py createcachetable
+    python {toxinidir}/tests/manage.py makemigrations
+    python {toxinidir}/tests/manage.py migrate
+    python {toxinidir}/tests/manage.py shell -c "from django.contrib.auth import get_user_model;User = get_user_model();(not User.objects.filter(username='admin').exists()) and User.objects.create_superuser('admin', 'super@example.com', 'changeme')"
+    python {toxinidir}/tests/manage.py createcachetable
 
 commands =
     {posargs:python {toxinidir}/tests/manage.py runserver 0.0.0.0:8020}
