--- a/tox.ini
+++ b/tox.ini
@@ -2,8 +2,9 @@
 min_version = 4.0
 
 env_list =
-    py{38,39,310,311}-django4.2-wagtail{5.2,6.1,main}
-    py{310,311,312}-django5.0-wagtail{5.2,6.1,main}
+    py{38,39,310,311}-django4.2-wagtail{5.2,6.1,6.2,main}
+    py{310,311,312}-django5.0-wagtail{5.2,6.1,6.2,main}
+    py312-django5.1-wagtail{6.2,main}
 
 [gh-actions]
 python =
@@ -34,8 +35,10 @@ deps =
     coverage>=7.0,<8.0
     django4.2: Django>=4.2,<4.3
     django5.0: Django>=5.0,<5.1
+    django5.1: Django>=5.1,<5.2
     wagtail5.2: wagtail>=5.2,<5.3
     wagtail6.1: wagtail>=6.1,<6.2
+    wagtail6.2: wagtail>=6.2,<6.3
 
 install_command = python -Im pip install -U {opts} {packages}
 
@@ -63,10 +66,10 @@ deps =
     wagtail>=5.2
 
 commands_pre =
-    python -Im {toxinidir}/tests/manage.py makemigrations
-    python -Im {toxinidir}/tests/manage.py migrate
-    python -Im {toxinidir}/tests/manage.py shell -c "from django.contrib.auth import get_user_model;User = get_user_model();(not User.objects.filter(username='admin').exists()) and User.objects.create_superuser('admin', 'super@example.com', 'changeme')"
-    python -Im {toxinidir}/tests/manage.py createcachetable
+    python {toxinidir}/tests/manage.py makemigrations
+    python {toxinidir}/tests/manage.py migrate
+    python {toxinidir}/tests/manage.py shell -c "from django.contrib.auth import get_user_model;User = get_user_model();(not User.objects.filter(username='admin').exists()) and User.objects.create_superuser('admin', 'super@example.com', 'changeme')"
+    python {toxinidir}/tests/manage.py createcachetable
 
 commands =
     {posargs:python {toxinidir}/tests/manage.py runserver 0.0.0.0:8020}
