--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,12 +14,12 @@ classifiers = [
     "Framework :: Django",
     "Framework :: Django :: 4.2",
     "Framework :: Django :: 5.0",
+    "Framework :: Django :: 5.1",
     "Framework :: Wagtail",
     "Framework :: Wagtail :: 5",
     "Framework :: Wagtail :: 6",
     "License :: OSI Approved :: BSD License",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
@@ -27,7 +27,7 @@ classifiers = [
 ]
 
 dynamic = ["version"]
-requires-python = ">=3.8"
+requires-python = ">=3.9"
 dependencies = [
     "Wagtail>=5.2",
     "python-dateutil>=2.8,<3.0.0"
@@ -55,6 +55,7 @@ exclude = [
     "*.ini",
     "*.sqlite3",
     "*.yml",
+    "*.yaml",
     "ruff.toml",
     "manage.py",
 ]
