--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-min_version = 4.0
+min_version = 4.11
 
 env_list =
     python{39,310,311}-django4.2-wagtail{5.2,6.1,6.2}
@@ -27,8 +27,8 @@ setenv =
     PYTHONPATH = {toxinidir}
     DJANGO_SETTINGS_MODULE = tests.settings
     PYTHONDEVMODE = 1
-    # will use the Python 3.12+ sys.monitoring when available
-    COVERAGE_CORE=sysmon
+    # use the Python 3.12+ sys.monitoring
+    python3.12: COVERAGE_CORE=sysmon
 
 deps =
     coverage>=7.0,<8.0
