--- a/.github/workflows/ruff.yml
+++ b/.github/workflows/ruff.yml
@@ -16,8 +16,8 @@ jobs:
     - uses: actions/checkout@v4
 
     # keep in sync with .pre-commit-config.yaml
-    - run: python -Im pip install --user ruff==0.4.9
+    - run: python -Im pip install --user ruff==0.6.1
 
     - name: Run ruff
       working-directory: ./src
-      run: ruff --output-format=github wagtail_periodic_review
+      run: ruff check --output-format=github wagtail_periodic_review
