--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,6 +2,9 @@ default_language_version:
   # Keep in sync with test.yml/PYTHON_LATEST
   python: python3.12
 
+ci:
+  autoupdate_schedule: monthly
+
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.6.0
@@ -18,7 +21,7 @@ repos:
       - id: trailing-whitespace
   - repo: https://github.com/astral-sh/ruff-pre-commit
     # keep in sync with .github/workflows/ruff.yml
-    rev: 'v0.5.5'
+    rev: 'v0.6.1'
     hooks:
       - id: ruff
         args: [ --fix, --exit-non-zero-on-fix ]
