--- a/tox.ini
+++ b/tox.ini
@@ -1,18 +1,17 @@
 [tox]
-min_version = 4.0
+min_version = 4.11
 
 env_list =
-    py{38,39,310,311}-django4.2-wagtail{5.2,6.1,6.2,main}
-    py{310,311,312}-django5.0-wagtail{5.2,6.1,6.2,main}
-    py312-django5.1-wagtail{6.2,main}
+    python{39,310,311}-django4.2-wagtail{5.2,6.1,6.2}
+    python{310,311,312}-django5.0-wagtail{5.2,6.1,6.2}
+    python312-django5.1-wagtail{6.2,main}
 
 [gh-actions]
 python =
-    3.8: py38
-    3.9: py39
-    3.10: py310
-    3.11: py311
-    3.12: py312
+    3.9: python39
+    3.10: python310
+    3.11: python311
+    3.12: python312
 
 [testenv]
 package = wheel
@@ -28,14 +27,16 @@ setenv =
     PYTHONPATH = {toxinidir}
     DJANGO_SETTINGS_MODULE = tests.settings
     PYTHONDEVMODE = 1
-    # will use the Python 3.12+ sys.monitoring when available
-    COVERAGE_CORE=sysmon
+    # use the Python 3.12+ sys.monitoring
+    python3.12: COVERAGE_CORE=sysmon
 
 deps =
     coverage>=7.0,<8.0
+
     django4.2: Django>=4.2,<4.3
     django5.0: Django>=5.0,<5.1
     django5.1: Django>=5.1,<5.2
+
     wagtail5.2: wagtail>=5.2,<5.3
     wagtail6.1: wagtail>=6.1,<6.2
     wagtail6.2: wagtail>=6.2,<6.3
